# mpmi_shared_control

./: LICENSE  README.md
mpmi_sc/src/balance_bot_shared_control/: CMakeLists.txt  config.yaml  package.xml
mpmi_sc/src/balance_bot_shared_control/data/: model-sparse.csv
mpmi_sc/src/balance_bot_shared_control/launch/: system.launch
mpmi_sc/src/balance_bot_shared_control/scripts/: system.py
mpmi_sc/src/balance_bot_shared_control/src/: koopman_balance_bot_gpu.cu  shared_control_balance_bot.cpp
mpmi_sc/src/balance_bot_shared_control/src/model/: basis_balance_bot.hpp  koopman_balance_bot.hpp
mpmi_sc/src/balance_bot_shared_control/srv/: Mpmi.srv
mpmi_sc/src/gym/: package.xml  setup.py
mpmi_sc/src/gym/gym/envs/: __init__.py
mpmi_sc/src/gym/gym/envs/balance_bot/: __init__.py  balancebot_env.py  balancebot_env_noise.py
mpmi_sc/src/gym/gym/envs/box2d/: car_racing.py
mpmi_sc/src/race_car_shared_control/: CMakeLists.txt  config.yaml  package.xml
mpmi_sc/src/race_car_shared_control/data/: model-sparse.csv
mpmi_sc/src/race_car_shared_control/launch/: system.launch
mpmi_sc/src/race_car_shared_control/scripts/: polygon.py  system.py
mpmi_sc/src/race_car_shared_control/src/: koopman_race_car_gpu.cu  point.h  shared_control_race_car.cpp
mpmi_sc/src/race_car_shared_control/src/model/: basis_race_car.hpp  koopman_race_car.hpp
mpmi_sc/src/race_car_shared_control/srv/: Mpmi.srv
