<?xml version="1.0"?>
<package>

  <name>gym</name>
  <version>0.10.5</version>
  <description>The gym package</description>

  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>

</package>
